--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perinci-Object
 
+0.06     2012-03-15
+
+         [ENHANCEMENTS]
+
+         - Add 'rimeta'.
+
+
 0.05     2012-03-15
 
          [INCOMPATIBLE CHANGES]
