--- a/Changes
+++ b/Changes
@@ -7,22 +7,22 @@ Revision history for Perinci-Object
 
 0.10     2012-03-23 (SHARYANTO)
 
-         No functional changes. Resolve circular dependency problem with
-         SHARYANTO-Utils by splitting SHARYANTO::String::Util to its own dist.
-         [RT#75987, thanks Slaven]
+         - No functional changes. Resolve circular dependency problem with
+           SHARYANTO-Utils by splitting SHARYANTO::String::Util to its own dist.
+           [RT#75987, thanks Slaven]
 
 
 0.09     2012-03-22 (SHARYANTO)
 
-         No functional changes. Try to work around dependency problem (some
-         systems cannot find SHARYANTO::String::Util, new in SHARYANTO-Utils
-         0.16+).
+         - No functional changes. Try to work around dependency problem (some
+           systems cannot find SHARYANTO::String::Util, new in SHARYANTO-Utils
+           0.16+).
 
 
 0.08     2012-03-20 (SHARYANTO)
 
-         No functional changes. Fix Perl version dependency ('parent' requires
-         5.10.1).
+         - No functional changes. Fix Perl version dependency ('parent' requires
+           5.10.1).
 
 
 0.07     2012-03-15 (SHARYANTO)
@@ -60,6 +60,6 @@ Revision history for Perinci-Object
 
 0.04     2012-01-26 (SHARYANTO)
 
-         First release, rename from Sub-Spec-Object to Perinci-Object. Now
-         follows Rinci (currently 1.1) specification instead of Sub::Spec
-         1.0 (but still supports old sub specs).
+         - First release, rename from Sub-Spec-Object to Perinci-Object. Now
+           follows Rinci (currently 1.1) specification instead of Sub::Spec 1.0
+           (but still supports old sub specs).
