--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perinci-Object
 
+0.12     2013-12-11 (SHARYANTO)
+
+         - langprop() observers LANG/LANGUAGE environment.
+
+
 0.11     2012-08-29 (SHARYANTO)
 
          - function: Add features() and can_dry_run().
