--- a/Changes
+++ b/Changes
@@ -45,7 +45,7 @@ Revision history for Perinci-Object
 
 0.12     2013-12-11 (SHARYANTO)
 
-         - langprop() observers LANG/LANGUAGE environment.
+         - langprop() now observes LANG/LANGUAGE environment.
 
 
 0.11     2012-08-29 (SHARYANTO)
