--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Perinci-Object
 
+0.24    2015-09-03 (PERLANCAR)
+
+	- No functional changes.
+
+	- [dist] Move spec prereqs from RuntimeRequires to
+	  DevelopRecommends to reduce deps but still allow indicating spec
+	  requirement.
+
+
 0.23    2015-09-03 (PERLANCAR)
 
 	- Assume LANG=C will use the default en_US, this fixes lots of
