--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perinci-Object
 
+0.27    2016-12-26 (PERLANCAR)
+
+	- Downgrade prereq String::Trim::More from RuntimeRequires to
+	  DevelopSuggests, copy-paste routine trim_blank_lines().
+
+
 0.26    2016-12-15 (PERLANCAR)
 
 	- risub: Add method default_dry_run to check default dry-run mode
