--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perinci-Object
 
+0.29    2016-12-28 (PERLANCAR)
+
+	- No functional changes.
+
+        - [dist] Fix expressing follow-spec prereq relationship with x_spec, and
+          copy-paste prereq relationship with x_copypaste.
+
+
 0.28    2016-12-27 (PERLANCAR)
 
 	- No functional changes.
