--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.30    2017-02-03 (PERLANCAR)
+
+	- EnvResultMulti: Allow add_result() to override status/message
+	  keys.
+
+
 0.29    2016-12-28 (PERLANCAR)
 
 	- No functional changes.
